[gd_scene load_steps=5 format=2]

[ext_resource path="res://HTTP_Request.gd" type="Script" id=1]
[ext_resource path="res://Font/ubuntu.tres" type="DynamicFont" id=2]
[ext_resource path="res://Font/Ubuntu-Medium.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 3 )

[node name="HTTP_Request" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.666667, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 384.0
margin_top = 96.0
margin_right = 640.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 384.0
margin_top = 24.0
margin_right = 640.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 1 )
text = "GodotDex!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 384.0
margin_top = 424.0
margin_right = 640.0
margin_bottom = 488.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 320.0
margin_top = 512.0
margin_right = 704.0
margin_bottom = 576.0
text = "Press me!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 424.0
margin_top = 176.0
margin_right = 624.0
margin_bottom = 392.0
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="ImageRequest" to="." method="_on_ImageRequest_request_completed"]
